@@ -22,6 +22,9 @@ Enhancements:
  * Issue 128: files and directories owner and group names and os.readlink are 
    now resolved via AbstractedFS methods instead of in format_list().
 
+ * Issue 129: added 3 new callbacks to FTPHandler class: 
+   on_incomplete_file_sent(), on_incomplete_file_received() and on_login().
+
  * Issue 130: added UnixAuthorizer and WindowsAuthorizer classes defined in the
    new pyftpdlib.contrib.authorizers module.
 
@@ -45,14 +48,19 @@ API changes since 0.5.2:
    longer relies on "ftpserver.proto_cmds" global dictionary but on
    "ftphandler.FTPHandler.proto_cmds" instead.
 
+ * FTPHandler class has 3 new methods:
+   on_incomplete_file_sent()
+   on_incomplete_file_received()
+   on_login()
+
  * Added a new package in pyftpdlib namespace: "contrib". Modules defined here:
    pyftpdlib.contrib.handlers.py
    pyftpdlib.contrib.authorizers.py 
 
  * AbstractedFS class has 3 new methods: 
-   get_user_by_uid
-   get_group_by_gid 
-   readlink
+   get_user_by_uid()
+   get_group_by_gid()
+   readlink()
 
 
 Version: 0.5.2 - Date: 2009-09-14
